--- a/src/main/resources/ui/multidownload.fxml
+++ b/src/main/resources/ui/multidownload.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 <ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="527.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
@@ -12,8 +13,20 @@
       <VBox fx:id="panel" prefHeight="488.0" prefWidth="598.0">
          <children>
             <TextField fx:id="tfUrl" />
-            <Button fx:id="btDownload" mnemonicParsing="false" onAction="#launchDownload" text="Descargar" />
-            <Button fx:id="btStopAllDownloads" mnemonicParsing="false" onAction="#stopAllDownloads" prefHeight="24.0" prefWidth="238.0" text="Cancelar todas las descargas" />
+            <HBox prefHeight="32.0" prefWidth="578.0">
+               <children>
+                  <Button fx:id="btDownload" mnemonicParsing="false" onAction="#launchDownload" text="Descargar">
+                     <HBox.margin>
+                        <Insets top="15.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btStopAllDownloads" mnemonicParsing="false" onAction="#stopAllDownloads" prefHeight="24.0" prefWidth="238.0" text="Cancelar todas las descargas">
+                     <HBox.margin>
+                        <Insets left="30.0" top="15.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
             <TabPane fx:id="tpDownloads" prefHeight="313.0" prefWidth="578.0" tabClosingPolicy="UNAVAILABLE" />
          </children>
          <padding>
