--- a/src/main/resources/ui/download.fxml
+++ b/src/main/resources/ui/download.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="218.0" prefWidth="364.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -16,6 +18,11 @@
             <Insets bottom="5.0" left="10.0" right="5.0" top="5.0" />
          </VBox.margin>
       </TextField>
+      <Button fx:id="btchangeRoute" mnemonicParsing="false" onAction="#changeRoute" text="Cambiar Ruta" textFill="#463ae6" textOverrun="CENTER_ELLIPSIS">
+         <VBox.margin>
+            <Insets left="10.0" />
+         </VBox.margin>
+      </Button>
       <HBox prefHeight="79.0" prefWidth="154.0">
          <children>
             <Button fx:id="btStart" mnemonicParsing="false" onAction="#start" text="Iniciar">
@@ -28,7 +35,12 @@
                </HBox.margin></Button>
          </children>
       </HBox>
-      <ProgressBar fx:id="pbProgress" prefHeight="22.0" prefWidth="324.0" progress="0.0" />
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Progreso">
+         <font>
+            <Font size="10.0" />
+         </font>
+      </Text>
+      <ProgressBar fx:id="pbProgress" prefHeight="50.0" prefWidth="324.0" progress="0.0" />
       <Label fx:id="lbStatus" prefHeight="17.0" prefWidth="325.0" />
    </children>
    <padding>
