--- a/src/main/resources/ui/multidownload.fxml
+++ b/src/main/resources/ui/multidownload.fxml
@@ -7,27 +7,34 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
 <ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="527.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <content>
       <VBox fx:id="panel" prefHeight="488.0" prefWidth="598.0">
          <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Por favor, pega la URL que deseas descargar." wrappingWidth="298.072265625" />
             <TextField fx:id="tfUrl" />
             <HBox prefHeight="32.0" prefWidth="578.0">
                <children>
                   <Button fx:id="btDownload" mnemonicParsing="false" onAction="#launchDownload" text="Descargar">
                      <HBox.margin>
-                        <Insets top="15.0" />
+                        <Insets bottom="15.0" top="15.0" />
                      </HBox.margin>
                   </Button>
                   <Button fx:id="btStopAllDownloads" mnemonicParsing="false" onAction="#stopAllDownloads" prefHeight="24.0" prefWidth="238.0" text="Cancelar todas las descargas">
                      <HBox.margin>
-                        <Insets left="30.0" top="15.0" />
+                        <Insets bottom="15.0" left="30.0" top="15.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btlogFile" mnemonicParsing="false" onAction="#logFile" text="Registro de Descargas" textFill="#d07717">
+                     <HBox.margin>
+                        <Insets bottom="15.0" left="30.0" top="15.0" />
                      </HBox.margin>
                   </Button>
                </children>
             </HBox>
-            <TabPane fx:id="tpDownloads" prefHeight="313.0" prefWidth="578.0" tabClosingPolicy="UNAVAILABLE" />
+            <TabPane fx:id="tpDownloads" prefHeight="313.0" prefWidth="578.0" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
