--- a/src/main/resources/ui/multidownload.fxml
+++ b/src/main/resources/ui/multidownload.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
@@ -37,6 +38,16 @@
                         <Insets bottom="15.0" left="20.0" top="15.0" />
                      </HBox.margin>
                   </Button>
+               </children>
+            </HBox>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label text="Programar descarga.   " textAlignment="CENTER" />
+                  <TextField fx:id="tfTime">
+                     <opaqueInsets>
+                        <Insets left="15.0" />
+                     </opaqueInsets>
+                  </TextField>
                </children>
             </HBox>
             <TabPane fx:id="tpDownloads" prefHeight="313.0" prefWidth="578.0" />
